# falcon2017

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: fuzz-check.yml
artifacts/: README.md  cargo-audit.json  cargo-audit.md  ct-dynamic-timing-review.md  ct-dynamic-timing.json  ct-dynamic-timing.md  ct-source-review-sampler-signing.md  ct-source-review-soft-fft.md  ct-source-review-soft-fpr.md  ref-differential-sign.json  ref-differential-summary.md
artifacts/ct-vm-0f66aed-20260426/: README.md  ct-dynamic-timing.json  ct-dynamic-timing.md
artifacts/ct-vm-1bb6deb-20260426/: README.md  ct-dynamic-timing.json  ct-dynamic-timing.md
artifacts/fuzz/: README.md  c1-gnu-asan-20260423.json  c1-gnu-asan-20260423.md
docs/: api.md  baseline.md  baseline_definition.md  c0_claim_boundary.md  ct-strict.md  ct_equivalence.md  ct_threat_model.md  deep-research-report.md  dgs_prod_v1.md  dgs_table_manifest_v1.md  fuzzing.md  hardening_plan.md  no-nist.md  ref_equivalence.md  ref_security_claim.md  tests.md  timing.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_public.rs  decode_public_key.rs  decode_secret.rs  decode_secret_key.rs  decode_signature.rs  verify.rs
scripts/: check_dgs_prod_v1_bounds.py  check_dgs_table_manifest.py  run_gnu_fuzz_campaign.sh
src/: compression.rs  error.rs  lib.rs  params.rs  types.rs
src/encoding/: mod.rs  public_key.rs  ring12289.rs  ring18433.rs  secret_key.rs  signature.rs  smallvec.rs
src/falcon/: expand_ct.rs  hash_to_point.rs  keygen.rs  (+8 more)
tests/: codec_properties.rs  ct_consistency.rs  differential_derive_public.rs  differential_keygen.rs  differential_sign_ref.rs  differential_verify.rs  encode_decode.rs  kat_ntru.rs  kat_prng.rs  kat_shake.rs  malformed_inputs.rs  sign_verify_roundtrip.rs
(+37 files in other folders)
