[package]
name = "falcon2017"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, optional = true }
subtle = { version = "2", default-features = false, optional = true }

[features]
default = ["std", "ref-f64", "zeroize"]
std = []
ref-f64 = []
soft-fpr = []
ct-strict = ["soft-fpr", "subtle"]
deterministic-tests = []
hazmat = []

[dev-dependencies]
proptest = "1"
