[package]
name = "falcon2017-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
default = ["std"]
std = []

[dependencies]
libfuzzer-sys = "0.4"

[[bin]]
name = "decode_signature"
path = "fuzz_targets/decode_signature.rs"
test = false
doc = false

[[bin]]
name = "decode_public_key"
path = "fuzz_targets/decode_public_key.rs"
test = false
doc = false

[[bin]]
name = "decode_secret_key"
path = "fuzz_targets/decode_secret_key.rs"
test = false
doc = false
