[package]
name = "falcon2017-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
default = ["std"]
std = []

[dependencies]
falcon2017 = { path = ".." }
libfuzzer-sys = "0.4"
rand_core = "0.6"

[[bin]]
name = "decode_signature"
path = "fuzz_targets/decode_signature.rs"
test = false
doc = false

[[bin]]
name = "decode_public_key"
path = "fuzz_targets/decode_public_key.rs"
test = false
doc = false

[[bin]]
name = "decode_secret_key"
path = "fuzz_targets/decode_secret_key.rs"
test = false
doc = false

[[bin]]
name = "verify"
path = "fuzz_targets/verify.rs"
test = false
doc = false
